[package]
name = "xpak"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"
base64 = "0.22.1"
walkdir = "2.4"
ctrlc = "3.4"
console = "0.15.7"